--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@ html {
 body {
 	height: 100%;
 	margin: 0;
-	background-image: linear-gradient(to bottom right, lightgrey, darkgrey);
+	background-image: linear-gradient(to bottom right, gainsboro, darkgrey);
 }
 
 table {
